--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-baseurl = "http://tonyalaribe.github.io"
+BaseURL = "http://tonyalaribe.github.io"
 languageCode = "en-us"
 title = "Anthony Alaribe"
 disqusShortname = "anthonyalaribe"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License."
-
+theme = "white-forest"
 [author]
     name = "Anthony Alaribe"
 
