--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ title = "Anthony Alaribe"
 disqusShortname = "anthonyalaribe"
 copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License."
 theme = "white-forest"
+PygmentsCodeFences = true
+pygmentsstyle = "monokai"
 [author]
     name = "Anthony Alaribe"
 
